test/files/neg/xmltruncated2.scala
object Main {
  val stuff = <![CDATA[aoeu
