test/files/neg/xmltruncated2.check
xmltruncated2.scala:3: error: input ended while parsing XML

^
one error found
